--- a/.tekton/rhtap-perf-integration-test.yaml
+++ b/.tekton/rhtap-perf-integration-test.yaml
@@ -20,13 +20,13 @@ spec:
       name: PORT
       default: ""
       type: string
-    - description: 'Horreum Test Name'
+    - description: 'Horreum test name'
       name: HR_TEST_NAME
-      default: ""
+      default: "comp-rh-trex"
       type: string
     - description: 'Horreum regression variable'
       name: HR_REG_VAR
-      default: ""
+      default: "iteration_duration"
       type: string
   tasks:
     - name: provision-env
@@ -76,7 +76,8 @@ spec:
                 exit 1
               fi
     - name: deploy-app
-      runAfter: [provision-env]
+      runAfter:
+        - provision-env
       params:
         - name: SNAPSHOT
           value: $(params.SNAPSHOT)
@@ -84,10 +85,6 @@ spec:
           value: $(params.NAMESPACE)
         - name: PORT
           value: $(params.PORT)
-        - name: HR_TEST_NAME
-          value: $(params.HR_TEST_NAME)
-        - name: HR_REG_VAR
-          value: $(params.HR_REG_VAR)
       taskSpec:
         params:
           - name: SNAPSHOT
@@ -98,19 +95,9 @@ spec:
           - default: ""
             name: PORT
             description: Application endpoint Port
-          - name: HR_TEST_NAME
-            description: 'Horreum Test Name'
-          - name: HR_REG_VAR
-            description: 'Horreum regression variable'
         results:
           - name: APP_URL
             description: APP URL
-          - name: test_name
-            description: Test name
-          - name: reg_var
-            description: Regression variable
-          - name: TEST_OUTPUT
-            description: Test output
         steps:
         - image: registry.redhat.io/openshift4/ose-cli:latest
           env:
@@ -137,73 +124,87 @@ spec:
                   key: client_secret
           script: |
             #!/usr/bin/env bash
-            cat <<< "$KUBECONFIG_VALUE" > /tmp/cfg
+
             dnf -y install jq git
+
+            # Expose KUBECONFIG for test namespace
+            cat <<< "$KUBECONFIG_VALUE" > /tmp/cfg
             export KUBECONFIG=/tmp/cfg
 
-            # Get the route for the application endpoint
-            COMPONENT_NAME=$(echo -n ${SNAPSHOT} | jq -r .components[0].name)
-            # The --insecure-skip-tls-verify option is added for local testing
-            # when the clusters only have self-signed certificates.
-            # This option should not be used in production.
-
-            TARGET_COMPONENT_NAME="/tmp/rh-trex"
-            REPO_URL=$(echo $SNAPSHOT | jq -r '.components[] | .source.git.url')
-            REPO_COMMIT=$(echo $SNAPSHOT | jq -r '.components[] | .source.git.revision')
-            REPO_IMG=$(echo $SNAPSHOT | jq -r '.components[] | .containerImage')
-            git clone $REPO_URL $TARGET_COMPONENT_NAME
-            cd $TARGET_COMPONENT_NAME
+            # Clone application repository (we expect exactly one component)
+            REPO_TARGET="/tmp/rh-trex"
+            REPO_URL=$(echo $SNAPSHOT | jq -r '.components[0] | .source.git.url')
+            REPO_IMG=$(echo $SNAPSHOT | jq -r '.components[0] | .containerImage')
+            git clone $REPO_URL $REPO_TARGET
+            cd $REPO_TARGET
             git checkout $REPO_COMMIT
+
+            # Prepare tempaltes this application uses for deployment
             rev=$(echo ${REPO_IMG#*/})
             image_reg=$(echo ${REPO_IMG%%/*})
             image_tag=$(echo ${rev#*:})
             image_rep=$(echo ${rev%:*})
             mkdir -p /tmp/templates/
-            for i in $(ls templates/*yml); do j=${i#*/}; outf=${j%.*};oc process --kubeconfig /tmp/cfg --filename="$i" --local="true" --ignore-unknown-parameters="true" --param="ENVIRONMENT"=development --param="GLOG_V"=10  --param="DATABASE_HOST"=trex-db.$(oc project --short) --param="DATABASE_NAME"=rhtrex  --param="DATABASE_PASSWORD"=foobar-bizz-buzz  --param="DATABASE_PORT"=5432 --param="DATABASE_USER"=trex  --param="DATABASE_SSLMODE"=disable --param="ENABLE_SENTRY"=false --param="SENTRY_KEY"=TODO --param="JWKS_URL"=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/certs  --param="OCM_SERVICE_CLIENT_ID"=${CLIENT_ID} --param="OCM_SERVICE_CLIENT_SECRET"=${CLIENT_SEC}  --param="OCM_BASE_URL"=https://api.integration.openshift.com --param="IMAGE_REGISTRY="$image_reg --param="IMAGE_REPOSITORY="$image_rep --param="IMAGE_TAG="$image_tag  > /tmp/templates/${outf}.json; done
-            oc apply --kubeconfig /tmp/cfg  -f /tmp/templates/db-template.json
-            oc apply --kubeconfig /tmp/cfg  -f /tmp/templates/secrets-template.json
-            oc apply --kubeconfig /tmp/cfg  -f /tmp/templates/service-template.json
+            for i in $(ls templates/*.yml); do
+              j=${i#*/}
+              outf=${j%.*}
+              oc process \
+                --kubeconfig /tmp/cfg \
+                --filename="$i" \
+                --local=true \
+                --ignore-unknown-parameters=true \
+                --param=ENVIRONMENT=development \
+                --param=GLOG_V=10 \
+                --param=DATABASE_HOST=trex-db.$(oc project --short) \
+                --param=DATABASE_NAME=rhtrex \
+                --param=DATABASE_PASSWORD=foobar-bizz-buzz \
+                --param=DATABASE_PORT=5432 \
+                --param=DATABASE_USER=trex \
+                --param=DATABASE_SSLMODE=disable \
+                --param=ENABLE_SENTRY=false \
+                --param=SENTRY_KEY=TODO \
+                --param=JWKS_URL=https://sso.redhat.com/auth/realms/redhat-external/protocol/openid-connect/certs \
+                --param=OCM_SERVICE_CLIENT_ID="${CLIENT_ID}" \
+                --param=OCM_SERVICE_CLIENT_SECRET="${CLIENT_SEC}" \
+                --param=OCM_BASE_URL=https://api.integration.openshift.com \
+                --param=IMAGE_REGISTRY="${image_reg}" \
+                --param=IMAGE_REPOSITORY="${image_rep}" \
+                --param=IMAGE_TAG="${image_tag}" \
+                > /tmp/templates/${outf}.json
+            done
+
+            # Deploy the application
+            oc apply --kubeconfig /tmp/cfg -f /tmp/templates/db-template.json
+            oc apply --kubeconfig /tmp/cfg -f /tmp/templates/secrets-template.json
+            oc apply --kubeconfig /tmp/cfg -f /tmp/templates/service-template.json
             oc expose --kubeconfig /tmp/cfg service trex
             oc get --kubeconfig /tmp/cfg all
-            ROUTE_NAME=$(oc get --kubeconfig /tmp/cfg routes trex -o name --insecure-skip-tls-verify)
-            HOST=$(oc get --kubeconfig /tmp/cfg "${ROUTE_NAME}" -o jsonpath={.spec.host}  --insecure-skip-tls-verify)
-            echo "Found target host ${HOST} for app ${APPLICATION_NAME}"
+
+            # Get the route for the application endpoint
+            ROUTE_NAME=$(oc get --kubeconfig /tmp/cfg routes trex -o name)
+            HOST=$(oc get --kubeconfig /tmp/cfg "${ROUTE_NAME}" -o jsonpath={.spec.host})
+            echo -n ${HOST} | tee $(results.APP_URL.path)
+            echo "Found target host ${HOST}"
 
             # Check the application endpoint
             ENDPOINT_OUTPUT=$(curl -k http://${HOST}:${PORT})
             echo -e "The endpoint outputs the following:\n ${ENDPOINT_OUTPUT}"
-            echo -e "Snapshot output:\n ${SNAPSHOT}"
-
-            echo ${HOST} > /tekton/home/endpoint_url
-            echo -n ${HOST} | tee $(results.APP_URL.path)
-            if [ -z $(params.HR_TEST_NAME) ]
-            then
-              echo '$(params.SNAPSHOT)'|jq -r .components[].name |  tr -d '\n\t' | tee $(results.test_name.path)
-            else
-              echo -n  '$(params.HR_TEST_NAME)' | tee $(results.test_name.path)
-            fi
-
-            if [ -z $(params.HR_REG_VAR) ]
-            then
-              echo -n 'iteration_duration' | tee $(results.reg_var.path)
-            else
-              echo -n '$(params.HR_REG_VAR)' | tee $(results.reg_var.path)
-            fi
+            echo -e "Snapshot:\n ${SNAPSHOT}"
     - name: perf-benchmark
       params:
         - name: url
           value: $(tasks.deploy-app.results.APP_URL)
         - name: test_name
-          value: $(tasks.deploy-app.results.test_name)
+          value: $(params.HR_TEST_NAME)
         - name: reg_var
-          value: $(tasks.deploy-app.results.reg_var)
+          value: $(params.HR_REG_VAR)
       taskSpec:
         params:
           - name: url
           - name: test_name
           - name: reg_var
         steps:
-        - image: grafana/k6
+        - image: docker.io/grafana/k6:latest
           name: run-perf
           env:
             - name: OCM_TOKEN
