feat: Show request metadata and hide download progress

--- a/.tekton/rhtap-perf-integration-test.yaml
+++ b/.tekton/rhtap-perf-integration-test.yaml
@@ -192,7 +192,7 @@ spec:
 
             # Check the application endpoint
             echo "The endpoint outputs the following:"
-            curl "http://${endpoint}:${PORT}"
+            curl -v -s "http://${endpoint}:${PORT}"
     - name: perf-benchmark
       params:
         - name: url
