feat: Get namespace name same way as above and do not specify it as it is default

--- a/.tekton/rhtap-perf-integration-test.yaml
+++ b/.tekton/rhtap-perf-integration-test.yaml
@@ -161,9 +161,8 @@ spec:
             oc get all
 
             # Return the service for the application endpoint
-            namespace="$( oc config view --minify -o jsonpath='{..namespace}' )"
-            port="$(oc -n ${namespace} get service/trex -o json | jq '.spec.ports[0].port')"
-            endpoint="http://trex.${namespace}.svc.cluster.local:${port}"
+            port="$(oc get service/trex -o json | jq '.spec.ports[0].port')"
+            endpoint="http://trex.$(oc project --short).svc.cluster.local:${port}"
             echo "${endpoint}" | tee $(results.APP_URL.path)
             echo "Application endpoint: ${endpoint}"
 
